Updated Month api to send booleans from journal